trunk/Archive2/3f/c9834b8b6bb110/output
main.cpp: In function 'int&& g()':
main.cpp:3:40: error: 'move' is not a member of 'std'
 int&& g() { static int i = 100; return std::move(i); }
                                        ^
main.cpp:3:54: warning: control reaches end of non-void function [-Wreturn-type]
 int&& g() { static int i = 100; return std::move(i); }
                                                      ^
